--- a/Object-Literals.html
+++ b/Object-Literals.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>if-else-switch-uygulama</h1>
-    <script src="script-if-else-switch-uygulama.js" type="text/Javascript"></script>
+    <h1>Object Literals</h1>
+
+    <script src="script-Object-Literals-Uygulama.js" type="text/Javascript"></script>
 </body>
+</html>
