--- a/Strings-Strings-metotları.html
+++ b/Strings-Strings-metotları.html
@@ -11,6 +11,6 @@
     
 <h1>Strings Metotları</h1>
 
-<script src="script-Strigs.js" type="text/Javascript"></script>
+<script src="script-Strings.js" type="text/Javascript"></script>
 
 </body>
