--- a/dom.html
+++ b/dom.html
@@ -36,7 +36,7 @@
 		</div>
 		<div class="card mt-3">
 			<div class="card-header">
-				Task List
+				<h5>Task List</h5>
 				    <a id="btnDeleteAll" href="#" class="btn btn-outline-danger btn-sm delete-all float-right">	
 						Delete All
 					</a>
